Pattern of the page and basic informations

--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
 <html>
 	<head>
 		<title>Ueslei Lima</title>
+		<link rel="stylesheet" href="css/materialize.min.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h2>Ueslei Lima</h2>
+		<div class="navbar-fixed">
+			<nav>
+				<div class="nav-wrapper white">
+					<a href="index.html" class="brand-logo">Ueslei Lima</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down">
+						<li><a href="index.html">Profile</a></li>
+						<li><a href="CV/.html">Curriculum</a></li>
+						<li><a href="Projects/index.html">Projetos</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<div class="parallax-container">
+			<div class="parallax pattern-cover">
+				<h1 class="white-text center"><i class="fa fa-code fa-3x"></i></h1>
+				<h2 class="white-text center">Ueslei Pereira de Lima</h2>
+				<h3 class="white-text center">Development</h3>
+			</div>
+		</div>
+		<div class="section white">
+			<div class="row container">
+				<h2 class="header">Parallax</h2>
+				<p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+			</div>
+		</div>
+		<footer class="page-footer white">
+			<hr>
+			
+			
+		</footer>
 	</body>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/materialize.min.js"></script>
 </html>
